--- a/src/index.html
+++ b/src/index.html
@@ -19,6 +19,9 @@
   </head>
   <body>
     <header></header>
+    <a href="./restaurant.html" class="header-link">Ресторан</a>
+    <a href="./hotel.html" class="header-link">Готель</a>
+    <a href="./room.html" class="header-link">Комната</a>
     <main>
       <load src="partials/hero1.html" />
       <load src="partials/aboutrest.html" />
