--- a/src/room.html
+++ b/src/room.html
@@ -13,6 +13,9 @@
   </head>
   <body>
     <header></header>
+    <a href="./index.html" class="header-link">Homepage</a>
+    <a href="./restaurant.html" class="header-link">Ресторан</a>
+    <a href="./hotel.html" class="header-link">Готель</a>
     <main>
       <load src="partials/hero4.html" />
       <load src="partials/amenities.html" />
