--- a/src/index.html
+++ b/src/index.html
@@ -16,6 +16,7 @@
       href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.1.0/modern-normalize.min.css"
     />
     <link rel="stylesheet" href="./css/styles.css" />
+    <link rel="stylesheet" href="./css/aboutkitchen.css" />
   </head>
   <body>
     <header></header>
@@ -25,6 +26,7 @@
     <main>
       <load src="partials/hero1.html" />
       <load src="partials/aboutrest.html" />
+      <load src="partials/aboutkitchen.html" />
       <load src="partials/detailsrest.html" />
       <load src="partials/abouthotel.html" />
       <load src="partials/detailshotel.html" />
