--- a/src/restaurant.html
+++ b/src/restaurant.html
@@ -13,9 +13,9 @@
   </head>
   <body>
     <header></header>
-    <a href="./index.html" class="header-link">Homepage</a>
-    <a href="./hotel.html" class="header-link">Готель</a>
-    <a href="./room.html" class="header-link">Комната</a>
+    <a href="./index.html">Homepage</a>
+    <a href="./hotel.html">Готель</a>
+    <a href="./room.html">Комната</a>
     <main>
       <load src="partials/hero2.html" />
       <load src="partials/aboutkitchen.html" />
