--- a/src/hotel.html
+++ b/src/hotel.html
@@ -13,9 +13,9 @@
   </head>
   <body>
     <header></header>
-    <a href="./index.html" class="header-link">Homepage</a>
-    <a href="./restaurant.html" class="header-link">Ресторан</a>
-    <a href="./room.html" class="header-link">Комната</a>
+    <a href="./index.html">Homepage</a>
+    <a href="./restaurant.html">Ресторан</a>
+    <a href="./room.html">Комната</a>
     <main>
       <load src="partials/hero3.html" />
       <load src="partials/luxe.html" />
