--- a/src/index.html
+++ b/src/index.html
@@ -18,10 +18,9 @@
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
-    <header></header>
-    <a href="./restaurant.html" class="header-link">Ресторан</a>
-    <a href="./hotel.html" class="header-link">Готель</a>
-    <a href="./room.html" class="header-link">Комната</a>
+    <a href="./restaurant.html">Ресторан</a>
+    <a href="./hotel.html">Готель</a>
+    <a href="./room.html">Комната</a>
     <main>
       <load src="partials/hero1.html" />
       <load src="partials/aboutrest.html" />
