--- a/src/hotel.html
+++ b/src/hotel.html
@@ -12,7 +12,60 @@
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
-    <header></header>
+    <header class="header">
+      <div class="container">
+        <nav class="header-nav">
+          <a href="./index.html" class="header-logo">MIMIHO</a>
+          <ul class="header-list">
+            <li class="header-item">
+              <a href="./restaurant.html" class="header-link">Ресторан</a>
+            </li>
+            <li class="header-item">
+              <div class="header-box">
+                <svg class="header-icon" width="24px" height="24px">
+                  <use href="./img/icons.svg#phone"></use>
+                </svg>
+                <a href="tel:0955559533" class="header-tel">095 555 95 33</a>
+              </div>
+            </li>
+            <li class="header-item">
+              <a href="./hotel.html" class="header-link">Готель</a>
+            </li>
+            <li class="header-item">
+              <div class="header-box">
+                <svg class="header-icon" width="24px" height="24px">
+                  <use href="./img/icons.svg#phone"></use>
+                </svg>
+                <a href="tel:0668491089" class="header-tel">066 849 10 89</a>
+              </div>
+            </li>
+          </ul>
+        </nav>
+        <ul class="header-social-list">
+          <li class="header-social-item">
+            <a href="https://www.instagram.com/" class="header-social-link" target="_blank" rel="noreferrer noopener">
+              <svg class="header-social-icon" width="24px" height="24px">
+                <use href="./img/icons.svg#instagram"></use>
+              </svg>
+            </a>
+          </li>
+          <li class="header-social-item">
+            <a href="https://www.facebook.com/" class="header-social-link" target="_blank" rel="noreferrer noopener">
+              <svg class="header-social-icon" width="24px" height="24px">
+                <use href="./img/icons.svg#facebook"></use>
+              </svg>
+            </a>
+          </li>
+          <li class="header-social-item">
+            <a href="https://web.telegram.org/" class="header-social-link" target="_blank" rel="noreferrer noopener">
+              <svg class="header-social-icon" width="24px" height="24px">
+                <use href="./img/icons.svg#telegram"></use>
+              </svg>
+            </a>
+          </li>
+        </ul>
+      </div>
+    </header>
     <a href="./index.html">Homepage</a>
     <a href="./restaurant.html">Ресторан</a>
     <a href="./room.html">Комната</a>
