--- a/src/index.html
+++ b/src/index.html
@@ -49,21 +49,36 @@
         </nav>
         <ul class="header-social-list">
           <li class="header-social-item">
-            <a href="https://www.instagram.com/" class="header-social-link" target="_blank" rel="noreferrer noopener">
+            <a
+              href="https://www.instagram.com/"
+              class="header-social-link"
+              target="_blank"
+              rel="noreferrer noopener"
+            >
               <svg class="header-social-icon" width="24px" height="24px">
                 <use href="./img/icons.svg#instagram"></use>
               </svg>
             </a>
           </li>
           <li class="header-social-item">
-            <a href="https://www.facebook.com/" class="header-social-link" target="_blank" rel="noreferrer noopener">
+            <a
+              href="https://www.facebook.com/"
+              class="header-social-link"
+              target="_blank"
+              rel="noreferrer noopener"
+            >
               <svg class="header-social-icon" width="24px" height="24px">
                 <use href="./img/icons.svg#facebook"></use>
               </svg>
             </a>
           </li>
           <li class="header-social-item">
-            <a href="https://web.telegram.org/" class="header-social-link" target="_blank" rel="noreferrer noopener">
+            <a
+              href="https://web.telegram.org/"
+              class="header-social-link"
+              target="_blank"
+              rel="noreferrer noopener"
+            >
               <svg class="header-social-icon" width="24px" height="24px">
                 <use href="./img/icons.svg#telegram"></use>
               </svg>
