add footer/update header

--- a/src/index.html
+++ b/src/index.html
@@ -28,10 +28,12 @@
             </li>
             <li class="header-item">
               <div class="header-box">
-                <svg class="header-icon" width="24px" height="24px">
-                  <use href="./img/icons.svg#phone"></use>
-                </svg>
-                <a href="tel:0955559533" class="header-tel">095 555 95 33</a>
+                <a href="tel:0955559533" class="header-tel-link">
+                  <svg class="header-icon" width="24px" height="24px">
+                    <use href="./img/icons.svg#phone"></use>
+                  </svg>
+                  <span class="header-tel">095 555 95 33</span>
+                </a>
               </div>
             </li>
             <li class="header-item">
@@ -39,31 +41,48 @@
             </li>
             <li class="header-item">
               <div class="header-box">
-                <svg class="header-icon" width="24px" height="24px">
-                  <use href="./img/icons.svg#phone"></use>
-                </svg>
-                <a href="tel:0668491089" class="header-tel">066 849 10 89</a>
+                <a href="tel:0668491089" class="header-tel-link">
+                  <svg class="header-icon" width="24px" height="24px">
+                    <use href="./img/icons.svg#phone"></use>
+                  </svg>
+                  <span class="header-tel">066 849 10 89</span>
+                </a>
               </div>
             </li>
           </ul>
         </nav>
         <ul class="header-social-list">
           <li class="header-social-item">
-            <a href="https://www.instagram.com/" class="header-social-link" target="_blank" rel="noreferrer noopener">
+            <a
+              href="https://www.instagram.com/"
+              class="header-social-link"
+              target="_blank"
+              rel="noreferrer noopener"
+            >
               <svg class="header-social-icon" width="24px" height="24px">
                 <use href="./img/icons.svg#instagram"></use>
               </svg>
             </a>
           </li>
           <li class="header-social-item">
-            <a href="https://www.facebook.com/" class="header-social-link" target="_blank" rel="noreferrer noopener">
+            <a
+              href="https://www.facebook.com/"
+              class="header-social-link"
+              target="_blank"
+              rel="noreferrer noopener"
+            >
               <svg class="header-social-icon" width="24px" height="24px">
                 <use href="./img/icons.svg#facebook"></use>
               </svg>
             </a>
           </li>
           <li class="header-social-item">
-            <a href="https://web.telegram.org/" class="header-social-link" target="_blank" rel="noreferrer noopener">
+            <a
+              href="https://web.telegram.org/"
+              class="header-social-link"
+              target="_blank"
+              rel="noreferrer noopener"
+            >
               <svg class="header-social-icon" width="24px" height="24px">
                 <use href="./img/icons.svg#telegram"></use>
               </svg>
@@ -83,7 +102,59 @@
       <load src="partials/detailshotel.html" />
       <load src="partials/contacts.html" />
     </main>
-    <footer></footer>
+    <footer class="footer">
+      <div class="container">
+        <a href="./index.html" class="footer-logo">MIMIHO</a>
+        <div class="footer-box">
+          <ul class="footer-nav-list">
+            <li class="footer-nav-item"><a href="./index.html" class="footer-nav-link">Головна</a></li>
+            <li class="footer-nav-item"><a href="./restaurant.html" class="footer-nav-link">Ресторан</a></li>
+            <li class="footer-nav-item"><a href="./hotel.html" class="footer-nav-link">Готель</a></li>
+          </ul>
+          <ul class="footer-social-list">
+            <li class="footer-social-item">
+              <a 
+              href="https://www.instagram.com/"
+              class="footer-social-link"
+              target="_blank"
+              rel="noreferrer noopener"
+              >
+                <span class="footer-social-text">Instagram</span>
+                <svg class="footer-social-icon" width="24px" height="24px">
+                  <use href="./img/icons.svg#instagram"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="footer-social-item">
+              <a 
+              href="https://www.facebook.com/"
+              class="footer-social-link"
+              target="_blank"
+              rel="noreferrer noopener"
+              >
+                <span class="footer-social-text">Facebook</span>
+                <svg class="footer-social-icon" width="24px" height="24px">
+                  <use href="./img/icons.svg#facebook"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="footer-social-item">
+              <a 
+              href="https://web.telegram.org/"
+              class="footer-social-link"
+              target="_blank"
+              rel="noreferrer noopener"
+              >
+                <span class="footer-social-text">Telegram</span>
+                <svg class="footer-social-icon" width="24px" height="24px">
+                  <use href="./img/icons.svg#telegram"></use>
+                </svg>
+              </a>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </footer>
     <script type="module" src="/main.js"></script>
   </body>
 </html>
