--- a/src/index.html
+++ b/src/index.html
@@ -107,17 +107,23 @@
         <a href="./index.html" class="footer-logo">MIMIHO</a>
         <div class="footer-box">
           <ul class="footer-nav-list">
-            <li class="footer-nav-item"><a href="./index.html" class="footer-nav-link">Головна</a></li>
-            <li class="footer-nav-item"><a href="./restaurant.html" class="footer-nav-link">Ресторан</a></li>
-            <li class="footer-nav-item"><a href="./hotel.html" class="footer-nav-link">Готель</a></li>
+            <li class="footer-nav-item">
+              <a href="./index.html" class="footer-nav-link">Головна</a>
+            </li>
+            <li class="footer-nav-item">
+              <a href="./restaurant.html" class="footer-nav-link">Ресторан</a>
+            </li>
+            <li class="footer-nav-item">
+              <a href="./hotel.html" class="footer-nav-link">Готель</a>
+            </li>
           </ul>
           <ul class="footer-social-list">
             <li class="footer-social-item">
-              <a 
-              href="https://www.instagram.com/"
-              class="footer-social-link"
-              target="_blank"
-              rel="noreferrer noopener"
+              <a
+                href="https://www.instagram.com/"
+                class="footer-social-link"
+                target="_blank"
+                rel="noreferrer noopener"
               >
                 <span class="footer-social-text">Instagram</span>
                 <svg class="footer-social-icon" width="24px" height="24px">
@@ -126,11 +132,11 @@
               </a>
             </li>
             <li class="footer-social-item">
-              <a 
-              href="https://www.facebook.com/"
-              class="footer-social-link"
-              target="_blank"
-              rel="noreferrer noopener"
+              <a
+                href="https://www.facebook.com/"
+                class="footer-social-link"
+                target="_blank"
+                rel="noreferrer noopener"
               >
                 <span class="footer-social-text">Facebook</span>
                 <svg class="footer-social-icon" width="24px" height="24px">
@@ -139,11 +145,11 @@
               </a>
             </li>
             <li class="footer-social-item">
-              <a 
-              href="https://web.telegram.org/"
-              class="footer-social-link"
-              target="_blank"
-              rel="noreferrer noopener"
+              <a
+                href="https://web.telegram.org/"
+                class="footer-social-link"
+                target="_blank"
+                rel="noreferrer noopener"
               >
                 <span class="footer-social-text">Telegram</span>
                 <svg class="footer-social-icon" width="24px" height="24px">
@@ -155,6 +161,10 @@
         </div>
       </div>
     </footer>
+    <load src="partials/modalprice.html" />
+    <load src="partials/modalroom.html" />
+    <load src="partials/modaltable.html" />
+    <div class="modal-overlay js-overlay-modal"></div>
     <script type="module" src="/main.js"></script>
   </body>
 </html>
