--- a/src/hotel.html
+++ b/src/hotel.html
@@ -21,7 +21,7 @@
     <header class="header">
       <div class="container">
         <nav class="header-nav">
-          <a href="./index.html" class="header-logo">MIMIHO</a>
+          <a href="./index.html" class="header-logo">MIMIH<span class="accent">O</span></a>
           <ul class="header-list">
             <li class="header-item">
               <a href="./restaurant.html" class="header-link">Ресторан</a>
