--- a/src/restaurant.html
+++ b/src/restaurant.html
@@ -1,162 +1,134 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/hotel.svg" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Ресторан</title>
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500;600;700&display=swap"
-      rel="stylesheet"
-    />
-    <link
-      rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.1.0/modern-normalize.min.css"
-    />
-    <link rel="stylesheet" href="./css/styles.css" />
-  </head>
-  <body>
-    <header class="header">
-      <div class="container">
-        <nav class="header-nav">
-          <a href="./index.html" class="header-logo">MIMIH<span class="accent">O</span></a>
-          <ul class="header-list">
-            <li class="header-item">
-              <a href="./restaurant.html" class="header-link">Ресторан</a>
-            </li>
-            <li class="header-item">
-              <div class="header-box">
-                <a href="tel:0955559533" class="header-tel-link">
-                  <svg class="header-icon" width="24px" height="24px">
-                    <use href="./img/icons.svg#phone"></use>
-                  </svg>
-                  <span class="header-tel">095 555 95 33</span>
-                </a>
-              </div>
-            </li>
-            <li class="header-item">
-              <a href="./hotel.html" class="header-link">Готель</a>
-            </li>
-            <li class="header-item">
-              <div class="header-box">
-                <a href="tel:0668491089" class="header-tel-link">
-                  <svg class="header-icon" width="24px" height="24px">
-                    <use href="./img/icons.svg#phone"></use>
-                  </svg>
-                  <span class="header-tel">066 849 10 89</span>
-                </a>
-              </div>
-            </li>
-          </ul>
-        </nav>
-        <ul class="header-social-list">
-          <li class="header-social-item">
-            <a
-              href="https://www.instagram.com/"
-              class="header-social-link"
-              target="_blank"
-              rel="noreferrer noopener"
-            >
-              <svg class="header-social-icon" width="24px" height="24px">
+
+<head>
+  <meta charset="UTF-8" />
+  <link rel="icon" type="image/svg+xml" href="/hotel.svg" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Ресторан</title>
+  <link rel="preconnect" href="https://fonts.googleapis.com" />
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+  <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500;600;700&display=swap"
+    rel="stylesheet" />
+  <link rel="stylesheet"
+    href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.1.0/modern-normalize.min.css" />
+  <link rel="stylesheet" href="./css/styles.css" />
+</head>
+
+<body>
+  <header class="header">
+    <div class="container">
+      <nav class="header-nav">
+        <a href="./index.html" class="header-logo">MIMIH<span class="accent">O</span></a>
+        <ul class="header-list">
+          <li class="header-item">
+            <a href="./restaurant.html" class="header-link">Ресторан</a>
+          </li>
+          <li class="header-item">
+            <div class="header-box">
+              <a href="tel:0955559533" class="header-tel-link">
+                <svg class="header-icon" width="24px" height="24px">
+                  <use href="./img/icons.svg#phone"></use>
+                </svg>
+                <span class="header-tel">095 555 95 33</span>
+              </a>
+            </div>
+          </li>
+          <li class="header-item">
+            <a href="./hotel.html" class="header-link">Готель</a>
+          </li>
+          <li class="header-item">
+            <div class="header-box">
+              <a href="tel:0668491089" class="header-tel-link">
+                <svg class="header-icon" width="24px" height="24px">
+                  <use href="./img/icons.svg#phone"></use>
+                </svg>
+                <span class="header-tel">066 849 10 89</span>
+              </a>
+            </div>
+          </li>
+        </ul>
+      </nav>
+      <ul class="header-social-list">
+        <li class="header-social-item">
+          <a href="https://www.instagram.com/" class="header-social-link" target="_blank" rel="noreferrer noopener">
+            <svg class="header-social-icon" width="24px" height="24px">
+              <use href="./img/icons.svg#instagram"></use>
+            </svg>
+          </a>
+        </li>
+        <li class="header-social-item">
+          <a href="https://www.facebook.com/" class="header-social-link" target="_blank" rel="noreferrer noopener">
+            <svg class="header-social-icon" width="24px" height="24px">
+              <use href="./img/icons.svg#facebook"></use>
+            </svg>
+          </a>
+        </li>
+        <li class="header-social-item">
+          <a href="https://web.telegram.org/" class="header-social-link" target="_blank" rel="noreferrer noopener">
+            <svg class="header-social-icon" width="24px" height="24px">
+              <use href="./img/icons.svg#telegram"></use>
+            </svg>
+          </a>
+        </li>
+      </ul>
+    </div>
+  </header>
+  <main>
+    <load src="partials/hero2.html" />
+    <load src="partials/aboutkitchen.html" />
+    <load src="partials/menu.html" />
+  </main>
+  <footer class="footer">
+    <div class="container">
+      <a href="./index.html" class="footer-logo">MIMIHO</a>
+      <div class="footer-box">
+        <ul class="footer-nav-list">
+          <li class="footer-nav-item">
+            <a href="./index.html" class="footer-nav-link">Головна</a>
+          </li>
+          <li class="footer-nav-item">
+            <a href="./restaurant.html" class="footer-nav-link">Ресторан</a>
+          </li>
+          <li class="footer-nav-item">
+            <a href="./hotel.html" class="footer-nav-link">Готель</a>
+          </li>
+        </ul>
+        <ul class="footer-social-list">
+          <li class="footer-social-item">
+            <a href="https://www.instagram.com/" class="footer-social-link" target="_blank" rel="noreferrer noopener">
+              <span class="footer-social-text">Instagram</span>
+              <svg class="footer-social-icon" width="24px" height="24px">
                 <use href="./img/icons.svg#instagram"></use>
               </svg>
             </a>
           </li>
-          <li class="header-social-item">
-            <a
-              href="https://www.facebook.com/"
-              class="header-social-link"
-              target="_blank"
-              rel="noreferrer noopener"
-            >
-              <svg class="header-social-icon" width="24px" height="24px">
+          <li class="footer-social-item">
+            <a href="https://www.facebook.com/" class="footer-social-link" target="_blank" rel="noreferrer noopener">
+              <span class="footer-social-text">Facebook</span>
+              <svg class="footer-social-icon" width="24px" height="24px">
                 <use href="./img/icons.svg#facebook"></use>
               </svg>
             </a>
           </li>
-          <li class="header-social-item">
-            <a
-              href="https://web.telegram.org/"
-              class="header-social-link"
-              target="_blank"
-              rel="noreferrer noopener"
-            >
-              <svg class="header-social-icon" width="24px" height="24px">
+          <li class="footer-social-item">
+            <a href="https://web.telegram.org/" class="footer-social-link" target="_blank" rel="noreferrer noopener">
+              <span class="footer-social-text">Telegram</span>
+              <svg class="footer-social-icon" width="24px" height="24px">
                 <use href="./img/icons.svg#telegram"></use>
               </svg>
             </a>
           </li>
         </ul>
       </div>
-    </header>
-    <main>
-      <load src="partials/hero2.html" />
-      <load src="partials/aboutkitchen.html" />
-      <load src="partials/menu.html" />
-    </main>
-    <footer class="footer">
-      <div class="container">
-        <a href="./index.html" class="footer-logo">MIMIHO</a>
-        <div class="footer-box">
-          <ul class="footer-nav-list">
-            <li class="footer-nav-item">
-              <a href="./index.html" class="footer-nav-link">Головна</a>
-            </li>
-            <li class="footer-nav-item">
-              <a href="./restaurant.html" class="footer-nav-link">Ресторан</a>
-            </li>
-            <li class="footer-nav-item">
-              <a href="./hotel.html" class="footer-nav-link">Готель</a>
-            </li>
-          </ul>
-          <ul class="footer-social-list">
-            <li class="footer-social-item">
-              <a
-                href="https://www.instagram.com/"
-                class="footer-social-link"
-                target="_blank"
-                rel="noreferrer noopener"
-              >
-                <span class="footer-social-text">Instagram</span>
-                <svg class="footer-social-icon" width="24px" height="24px">
-                  <use href="./img/icons.svg#instagram"></use>
-                </svg>
-              </a>
-            </li>
-            <li class="footer-social-item">
-              <a
-                href="https://www.facebook.com/"
-                class="footer-social-link"
-                target="_blank"
-                rel="noreferrer noopener"
-              >
-                <span class="footer-social-text">Facebook</span>
-                <svg class="footer-social-icon" width="24px" height="24px">
-                  <use href="./img/icons.svg#facebook"></use>
-                </svg>
-              </a>
-            </li>
-            <li class="footer-social-item">
-              <a
-                href="https://web.telegram.org/"
-                class="footer-social-link"
-                target="_blank"
-                rel="noreferrer noopener"
-              >
-                <span class="footer-social-text">Telegram</span>
-                <svg class="footer-social-icon" width="24px" height="24px">
-                  <use href="./img/icons.svg#telegram"></use>
-                </svg>
-              </a>
-            </li>
-          </ul>
-        </div>
-      </div>
-    </footer>
-    <load src="partials/modaltable.html" />
-    <div class="modal-overlay js-overlay-modal"></div>
-    <script type="module" src="/main.js"></script>
-  </body>
+    </div>
+  </footer>
+  <load src="partials/modaltable.html" />
+  <div class="modal-overlay js-overlay-modal"></div>
+  <script type="module" src="/main.js"></script>
+  <script src="https://code.jquery.com/jquery-3.6.3.min.js"></script>
+  <script src="./js/slick.min.js"></script>
+  <script src="./js/slide.js"></script>
+</body>
+
 </html>
