--- a/src/hotel.html
+++ b/src/hotel.html
@@ -127,10 +127,11 @@
   <load src="partials/modalprice.html" />
   <load src="partials/modalroom.html" />
   <div class="modal-overlay js-overlay-modal"></div>
-  <script type="module" src="/main.js"></script>
+  <script type="module" src="./main.js"></script>
   <script src="https://code.jquery.com/jquery-3.6.3.min.js"></script>
-  <script src="./js/slick.min.js"></script>
-  <script src="./js/slide.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.8.1/slick.min.js"
+    integrity="sha512-XtmMtDEcNz2j7ekrtHvOVR4iwwaD6o/FUJe6+Zq+HgcCsk3kj4uSQQR8weQ2QVj1o0Pk6PwYLohm206ZzNfubg=="
+    crossorigin="anonymous" referrerpolicy="no-referrer"></script>
 </body>
 
 </html>
